--- a/translations/kangyur/translations/061-018_toh198-maitreyas_setting_out.xml
+++ b/translations/kangyur/translations/061-018_toh198-maitreyas_setting_out.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.10 <date>2021</date>
+                <edition>v 1.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -65,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:05:17.462Z" user="celso">18/01/2023 17:05:17</note>
+                <note type="lastUpdated" date-time="2023-07-27T00:47:35.518Z" user="admin">27/07/2023 00:47:35</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-01-27T13:16:15.494Z" user="mike">2.e</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-03-13T13:19:42.193Z" user="line-tofte">2.f</note>
@@ -96,6 +96,7 @@
                 <note type="updated" update="text-version" value="0.0.18" date-time="2021-04-06T14:25:22.832Z" user="mike">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.19" date-time="2021-04-12T07:50:46.243Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1" date-time="2021-04-20T12:45:56.161Z" user="mike">1</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2021-04-20T12:45:56.161Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-04-20T12:45:56.161Z" user="mike">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-04-20T15:07:03.156Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-20T15:08:26.193Z" user="john">1.0.2</note>
@@ -107,6 +108,7 @@
                 <note type="updated" update="text-version" value="1.0.8" date-time="2022-11-22T19:19:58.031Z" user="andre">Correction to toh reference 556-57 to 555-57</note>
                 <note type="updated" update="text-version" value="1.0.9" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.10" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.11" date-time="2023-07-27T00:47:32.681Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -197,8 +199,10 @@
                         apply if one wishes to be reborn close to him at that time. Other sūtras in which previous lives
                         of the bodhisattva Maitreya are recounted include <title xml:lang="en">The White Lotus of the
                             Good Dharma</title>, <title xml:lang="en">The Sublime Golden Light</title> (Toh
-                        555–57)<ref rend="pending" target="https://read.84000.co/translation/toh555.html"/>
-                        <ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>
+                        555,<note place="end" xml:id="UT22084-061-018-325">Roberts, Peter Alan. trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh555.html">The Sūtra of the Sublime Golden Light</ref>
+                            </title>, Toh 555 (84000: Translating the Words of the Buddha,
+                            2023).</note> Toh 556, Toh 557)<ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>
                         <ref rend="pending" target="https://read.84000.co/translation/toh557.html"/>, and <title xml:lang="en">The
                             Question of Maitreya</title> (Toh 85).<note place="end" xml:id="UT22084-061-018-13">
                             Interestingly, the bodhisattva qualities listed in <title xml:lang="en">Maitreya’s Setting
@@ -1555,6 +1559,9 @@
                     <bibl xml:id="UT22084-061-018-317">———, trans. (2021) <title xml:lang="en">
                         <ref target="https://read.84000.co/translation/toh44-45.html">The Stem Array</ref>
                     </title> (<title xml:lang="Sa-Ltn">Gaṇḍavyūha</title>, Toh 44-45). 84000: Translating the Words of the Buddha.</bibl>
+                    <bibl xml:id="UT22084-061-018-326">———, trans. (2023) <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh555.html">The Sūtra of the Sublime Golden Light</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottamasūtra</title>, Toh 555). 84000: Translating the Words of the Buddha.</bibl>
                     <bibl xml:id="UT22084-061-018-186">Sponberg, Alan, and Helen Hardacre, eds. <title xml:lang="en">Maitreya, the Future Buddha</title>. New York: Cambridge University Press, 1988.</bibl>
                     <bibl xml:id="UT22084-061-018-322">Thurman, Robert A. F., trans. <title xml:lang="en">
                         <ref target="https://read.84000.co/translation/toh176.html">The Teaching of Vimalakīrti</ref>
@@ -1592,27 +1599,26 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="term" xml:id="UT22084-061-018-307">
-                                <term>thus-gone one</term>
-                                <term xml:lang="Bo-Ltn">de bzhin gshegs pa</term>
-                            <term xml:lang="bo">དེ་བཞིན་གཤེགས་པ།</term>
-                                <term xml:lang="Sa-Ltn">tathāgata</term>
-                                <term type="definition">A frequently used synonym for buddhas. According to different explanations, it can be read as <foreign xml:lang="Sa-Ltn">tathā-gata</foreign>, literally meaning “one who has thus gone,” or as <foreign xml:lang="Sa-Ltn">tathā-agata</foreign>, “one who has thus come.” <foreign xml:lang="Sa-Ltn">Gata</foreign>, though literally meaning “gone,” is a past passive participle used to describe a state or condition of existence. <foreign xml:lang="Sa-Ltn">Tatha­(tā)</foreign>, often rendered as “suchness” or “thusness,” is the quality or condition of things as they really are, which cannot be conveyed in conceptual, dualistic terms. Therefore, this epithet is interpreted in different ways, but in general it implies one who has departed in the wake of the buddhas of the past, or one who has manifested the supreme enlightenment dependent on the reality that does not abide in the two extremes of existence and quiescence.</term>
-                                <term type="definition">Here also used as a specific epithet of the Buddha Śākyamuni.</term>
-                                <term type="alternative">thus-gone</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-307" type="term" mode="match">
+                            <term>thus-gone one</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">de bzhin gshegs pa</term>
+                            <term xml:lang="bo" type="sourceAttested">དེ་བཞིན་གཤེགས་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">tathāgata</term>
+                            <term type="alternative">thus-gone</term>
+                            <term type="definition">A frequently used synonym for buddhas. According to different explanations, it can be read as <foreign xml:lang="Sa-Ltn">tathā-gata</foreign>, literally meaning “one who has thus gone,” or as <foreign xml:lang="Sa-Ltn">tathā-agata</foreign>, “one who has thus come.” <foreign xml:lang="Sa-Ltn">Gata</foreign>, though literally meaning “gone,” is a past passive participle used to describe a state or condition of existence. <foreign xml:lang="Sa-Ltn">Tatha­(tā)</foreign>, often rendered as “suchness” or “thusness,” is the quality or condition of things as they really are, which cannot be conveyed in conceptual, dualistic terms. Therefore, this epithet is interpreted in different ways, but in general it implies one who has departed in the wake of the buddhas of the past, or one who has manifested the supreme enlightenment dependent on the reality that does not abide in the two extremes of existence and quiescence.</term>
+                            <term type="definition">Here also used as a specific epithet of the Buddha Śākyamuni.</term>
+                        </gloss>
+                    </item>
                         <item>
-                            <gloss type="term" xml:id="UT22084-061-018-308">
-                                <term>blessed one</term>
-                                <term xml:lang="Bo-Ltn">bcom ldan ’das</term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                                <term xml:lang="Sa-Ltn">bhagavān</term>
-                                <term xml:lang="Sa-Ltn">bhagavat</term>
-                                <term type="definition">In Buddhist literature, an epithet applied to buddhas, most often to Śākyamuni. The Sanskrit term generically means “possessing fortune,” but in specifically Buddhist contexts this term implies that a buddha is in possession of six auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>) associated with complete awakening. The Tibetan term—where <foreign xml:lang="Sa-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the four māras, <foreign xml:lang="Sa-Ltn" type="term">ldan</foreign> to “possessing” the great qualities of buddhahood, and <foreign xml:lang="Sa-Ltn" type="term">’das</foreign> to “going beyond” saṃsāra and nirvāṇa—possibly reflects the commentarial tradition where the Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted as “one who destroys the four māras.” This is achieved either by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”), or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root <foreign xml:lang="Sa-Ltn" type="term">√bhañj</foreign>, “to break.”</term>
-                                <term type="alternative">blessed</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-308" type="term" mode="match">
+                            <term>blessed one</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhagavān</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhagavat</term>
+                            <term type="alternative">blessed</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="term" xml:id="UT22084-061-018-309">
                                 <term>well-gone one</term>
@@ -1807,15 +1813,13 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="term" xml:id="UT22084-061-018-201">
-                                <term>five fundamental precepts</term>
-                                <term xml:lang="Bo-Ltn">bslab pa’i gzhi lnga</term>
-                            <term xml:lang="bo">བསླབ་པའི་གཞི་ལྔ།</term>
-                                <term xml:lang="Sa-Ltn">pañcaśikṣāpada</term>
-                                <term type="definition">Abstaining from killing, stealing, sexual misconduct, lying and
-                                    intoxication.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-201" type="term" mode="match">
+                            <term>five fundamental precepts</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bslab pa’i gzhi lnga</term>
+                            <term xml:lang="bo" type="sourceAttested">བསླབ་པའི་གཞི་ལྔ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">pañcaśikṣāpada</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="term" xml:id="UT22084-061-018-202">
                                 <term>generosity</term>
@@ -2050,14 +2054,14 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="person" xml:id="UT22084-061-018-227">
-                                <term>Ānanda</term>
-                                <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                                <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                                <term xml:lang="Sa-Ltn">Ānanda</term>
-                                <term type="definition">The Buddha’s cousin and principal attendant.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-227" type="person" mode="match">
+                            <term>Ānanda</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term type="definition">The Buddha’s cousin and principal attendant.</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="person" xml:id="UT22084-061-018-228">
                                 <term>Anāthapiṇḍada</term>
@@ -2107,17 +2111,14 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="person" xml:id="UT22084-061-018-233">
-                                <term>Four Great Kings</term>
-                                <term xml:lang="Bo-Ltn">rgyal po chen po bzhi </term>
-                                <term xml:lang="bo">རྒྱལ་པོ་ཆེན་པོ་བཞི།</term>
-                                <term xml:lang="Sa-Ltn">Caturmahārāja</term>
-                                <term type="definition">The powerful nonhuman guardian kings of the four
-                                    quarters—Virūḍhaka, Virūpākṣa, Dhṛtarāṣṭra, and Vaiśravaṇa—who rule, respectively,
-                                    over kumbhāṇḍas in the south, nāgas in the west, gandharvas in the east, and yakṣas
-                                    in the north.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-233" type="person" mode="match">
+                            <term>Four Great Kings</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">rgyal po chen po bzhi</term>
+                            <term xml:lang="bo" type="sourceAttested">རྒྱལ་པོ་ཆེན་པོ་བཞི།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">caturmahārāja</term>
+                            <term type="definition">The powerful nonhuman guardian kings of the four quarters—Virūḍhaka, Virūpākṣa, Dhṛtarāṣṭra, and Vaiśravaṇa—who rule, respectively, over kumbhāṇḍas in the south, nāgas in the west, gandharvas in the east, and yakṣas in the north.</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="person" xml:id="UT22084-061-018-234">
                                 <term>Golden Color </term>
@@ -2163,14 +2164,14 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="person" xml:id="UT22084-061-018-238">
-                                <term>Mañjuśrī</term>
-                                <term xml:lang="Bo-Ltn">’jam dpal </term>
-                                <term xml:lang="bo">འཇམ་དཔལ།</term>
-                                <term xml:lang="Sa-Ltn">Mañjuśrī</term>
-                                <term type="definition">Bodhisattva embodying wisdom. Also rendered here as Mañjuśrī­kumāra­bhūta.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-238" type="person" mode="match">
+                            <term>Mañjuśrī</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’jam dpal</term>
+                            <term xml:lang="bo" type="sourceAttested">འཇམ་དཔལ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mañjuśrī</term>
+                            <term type="definition">Also rendered here as Mañjuśrī­kumāra­bhūta.</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="person" xml:id="UT22084-061-018-239">
                                 <term>Mañjuśrī­kumāra­bhūta</term>
@@ -2269,15 +2270,14 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="person" xml:id="UT22084-061-018-249">
-                                <term>Yeshé Dé</term>
-                                <term xml:lang="Bo-Ltn">ye shes sde </term>
-                                <term xml:lang="bo">ཡེ་ཤེས་སྡེ།</term>
-                                <term xml:lang="Sa-Ltn"/>
-                                <term type="definition">A prolific Tibetan translator active during the late 8th and
-                                    early 9th centuries.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-061-018-249" type="person" mode="match">
+                            <term>Yeshé Dé</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ye shes sde</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡེ་ཤེས་སྡེ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
+                            <term type="definition">A prolific Tibetan translator active during the late 8th and early 9th centuries.</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="place" xml:id="UT22084-061-018-250">
                                 <term>Heaven Free from Strife</term>
