--- a/translations/kangyur/translations/076-003_toh349-the_account_of_the_noble_deeds_of_srisena.xml
+++ b/translations/kangyur/translations/076-003_toh349-the_account_of_the_noble_deeds_of_srisena.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2021</date>
+                <edition>v 1.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T15:33:46.098Z" user="celso">18/01/2023 15:33:46</note>
+                <note type="lastUpdated" date-time="2023-07-27T00:48:45.726Z" user="admin">27/07/2023 00:48:45</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-19T09:53:56.455Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:21:45.49Z" user="mike">2.d</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T10:59:57.706Z" user="line-tofte">2.h</note>
@@ -89,6 +89,7 @@
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T09:22:10.699Z" user="mike">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T13:20:39.984Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1" date-time="2021-03-19T00:50:36.398Z" user="mike">1</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2021-03-19T00:50:36.398Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-03-19T00:50:36.398Z" user="mike">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-03-19T17:47:55.543Z" user="konchog">Made about a dozen tiny fixes throughout.</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-15T08:25:40.236Z" user="line-tofte">Auto (update-contributors)</note>
@@ -97,6 +98,7 @@
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-29T16:04:02.517Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2023-07-27T00:48:42.584Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1097,7 +1099,6 @@
                                                         previous incarnation of the Buddha Śākyamuni did, thereby surpassing the deeds of the bodhisattva Maitreya,
                                                         who had set out for buddhahood forty eons earlier than the Buddha Śākyamuni. This tale is not only told in
                                                         both the <title xml:lang="Sa-Ltn">Śrīsenāvadāna</title> and the <title xml:lang="Sa-Ltn">Candra­prabhāvadāna</title>, but also in the <title xml:lang="en">Suvarṇaprabhāsa Sūtra</title>
-                            <ref rend="pending" target="https://read.84000.co/translation/toh555.html" inst="is it 555 or 556?"/>
                             <ref rend="pending" target="https://read.84000.co/translation/toh556.html" inst="is it 555 or 556?"/>
                                                         (See translation in Emmerick 1970, pp. 85–97). This last work identifies Maitreya as the older brother Mahāpraṇāda, who had
                                                         set out for buddhahood forty eons earlier, but does not offer his body to the tigress and is
@@ -1540,6 +1541,9 @@
                                         <bibl xml:id="UT22084-076-003-256">Matsumura, Hisashi, ed. “Four Avadānas from the Gilgit Manuscripts.” PhD diss., Australian National University, 1980.</bibl>
                                         <bibl xml:id="UT22084-076-003-258">Ohnuma, Reiko. <title xml:lang="en">Head, Eyes, Flesh, and Blood: Giving Away the Body in Indian Buddhist
                                                 Literature</title>. New York: Columbia University Press, 2007.</bibl>
+                                        <bibl xml:id="UT22084-076-003-347">Roberts, Peter Alan, trans. (2023) <title xml:lang="en">
+                                                <ref target="https://read.84000.co/translation/toh555.html">The Sūtra of the Sublime Golden Light</ref>
+                                        </title> (<title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottamasūtra</title>, Toh 555). 84000: Translating the Words of the Buddha.</bibl>
                                         <bibl xml:id="UT22084-076-003-260">Rothenberg, Bonnie Lynne. “Kṣemendra’s <title xml:lang="Sa-Ltn">Bodhisattvāvadāna­kalpalatā</title>: A Textcritical Edition and Translation of Chapters One to Five.” PhD diss., University of Wisconsin–Madison, 1990. </bibl>
                                 </div>
                         </div>
@@ -1586,17 +1590,16 @@
       </gloss>
     </item>
     <item>
-      <gloss type="term" xml:id="UT22084-076-003-266">
-        <term>god (lord)</term>
-        <term xml:lang="Bo-Ltn">lha </term>
-                            <term xml:lang="bo">ལྷ།</term>
-        <term xml:lang="Sa-Ltn">deva</term>
-        <term type="definition">A being in the paradises from the base of Mount Meru upward. It can also refer to a deity in the human world and is sometimes
-                (as in the present work) used as a term of endearment for a ruler or leader (translated as “lord”).</term>
-        <term type="alternative">god</term>
-        <term type="alternative">lord</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-076-003-266" type="term" mode="match">
+                            <term>god (lord)</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lha</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">deva</term>
+                            <term type="alternative">god</term>
+                            <term type="alternative">lord</term>
+                            <term type="definition">A being in the paradises from the base of Mount Meru upward. It can also refer to a deity in the human world and is sometimes (as in the present work) used as a term of endearment for a ruler or leader (translated as “lord”).</term>
+                        </gloss>
+                    </item>
     <item>
       <gloss type="term" xml:id="UT22084-076-003-267">
         <term>preceptor</term>
