--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.8 <date>2022</date>
+                <edition>v 1.1.9 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-21T14:27:25.391Z" user="admin">21/03/2023 14:27:25</note>
+                <note type="lastUpdated" date-time="2023-07-27T00:52:42.867Z" user="admin">27/07/2023 00:52:42</note>
                 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:25:23.489Z" user="mike">2.d</note>
@@ -71,6 +71,7 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-05-05T15:48:11.3Z" user="john">2.a</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-05T15:48:11.3Z" user="john">This TEI file duplicated from Toh 674, John is adapting to 675.</note>
     <note type="updated" update="translation-status" value="1" date-time="2021-06-18T19:25:40.086Z" user="john">1</note>
+    <note type="updated" update="translation-status" value="1.a" date-time="2021-06-18T19:25:40.086Z" user="admin">Note added retrospectively based on date of status '1'</note>
     <note type="updated" update="text-version" value="1.0.0" date-time="2021-06-18T19:25:40.086Z" user="john">First published version. </note>
     <note type="updated" update="text-version" value="1.0.1" date-time="2021-06-18T19:35:28.075Z" user="john">Addition to final paragraph of intro.</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2021-06-18T19:36:00.637Z" user="john">1.0.2</note>
@@ -87,6 +88,7 @@
     <note type="updated" update="text-version" value="1.1.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.1.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.1.8" date-time="2023-03-21T14:27:22.541Z" user="celso">Update to glossary entry "ten royal sūtras"</note>
+    <note type="updated" update="text-version" value="1.1.9" date-time="2023-07-27T00:52:40.009Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1247,9 +1249,7 @@
                                 <title xml:lang="Sa-Ltn">Kāśyapa­parivarta</title> 
                                 (Toh 87<ref rend="pending" target="https://read.84000.co/translation/toh87.html"/>), 
                                 and <title xml:lang="Sa-Ltn">Suvarṇa­bhāsottama­sūtra</title>s 
-                                (Toh 555-57<ref rend="pending" target="https://read.84000.co/translation/toh555.html"/>
-                            <ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>
-                            <ref rend="pending" target="https://read.84000.co/translation/toh557.html"/>). 
+                            (<ref target="https://read.84000.co/translation/toh555.html">Toh 555</ref>, Toh 556<ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>, <ref rend="pending" target="https://read.84000.co/translation/toh557.html"/>Toh 557). 
                                 In his detailed analysis of the use of the phrase, Schopen suggests (in essence) that it should probably be 
                                 understood as meaning that the place where the written text in question is to be found becomes “like a stūpa” 
                                 in the sense of being no less worthy of veneration than a monument housing or representing the relics of a 
@@ -1330,9 +1330,9 @@
                             latter. In the ninth century <title xml:lang="Sa-Ltn">Mahāvyuttpati</title>, the Tibetan
                                 <foreign xml:lang="Bo-Ltn">’khor ba ’jig</foreign> was used to translate Kakutsunda,
                             which is one of the hybrid Sanskrit forms for Krakucchanda (compare, for example, to
-                            Krakutsanda in the Sanskrit of the <title xml:lang="en">White Lotus of Compassion
-                                Sūtra</title>
-                            <ref rend="pending" target="https://read.84000.co/translation/toh112.html"/> and Kakusandha in Pali). The <title xml:lang="Sa-Ltn">Mahāvyutpatti</title> has <foreign xml:lang="Bo-Ltn">log pa dad sel</foreign> for Krakucchanda, but this latter translation
+                            Krakutsanda in the Sanskrit of the <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh112.html">White Lotus of Compassion Sūtra</ref>
+                            </title> and Kakusandha in Pali). The <title xml:lang="Sa-Ltn">Mahāvyutpatti</title> has <foreign xml:lang="Bo-Ltn">log pa dad sel</foreign> for Krakucchanda, but this latter translation
                             fell into disuse.</note> 
                         Kanakamuni, Kāśyapa, Śākyamuni, and so on, but it is impossible to
                         calculate the extent of the accumulation of merit for Aparimitāyur­jñāna.<note place="end" xml:id="UT22084-091-073-340">Whereas the 
@@ -1841,16 +1841,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-091-073-307">
+                        <gloss xml:id="UT22084-091-073-307" type="term" mode="match">
                             <term>deva</term>
-                            <term xml:lang="Bo-Ltn">lha</term>
-                            <term xml:lang="bo">ལྷ།</term>
-                            <term xml:lang="Sa-Ltn">deva</term>
-                            <term type="definition">One of the five or six classes of sentient beings, specifically
-                                engendered and dominated by exaltation, indulgence, and pride. According to Buddhist
-                                cosmology, the gods are said to exist in many levels of celestial or divine realms,
-                                higher than that of the human realm, within in the desire realm, in the form realm, and
-                                in the formless realm.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lha</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">deva</term>
+                            <term type="definition">One of the five or six classes of sentient beings, specifically engendered and dominated by exaltation, indulgence, and pride. According to Buddhist cosmology, the gods are said to exist in many levels of celestial or divine realms, higher than that of the human realm, within in the desire realm, in the form realm, and in the formless realm.</term>
                         </gloss>
                     </item>
                     <item>
@@ -1880,10 +1876,10 @@
                             <term xml:lang="Bo-Ltn">lha ma yin </term>
                             <term xml:lang="bo">ལྷ་མ་ཡིན།</term>
                             <term xml:lang="Sa-Ltn">asura </term>
-                            <term type="definition">One of the six classes of sentient beings. The asuras are engendered
+                            <!--<term type="definition">One of the six classes of sentient beings. The asuras are engendered
                                 and dominated by envy, ambition, and hostility and are described as being incessantly
                                 embroiled in disputes with the gods (deva). They are frequently portrayed in brahmanical
-                                mythology as having a disruptive effect on cosmological and social harmony.</term>
+                                mythology as having a disruptive effect on cosmological and social harmony.</term>-->
                         </gloss>
                     </item>
                     <item>
@@ -1968,13 +1964,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-091-073-251">
+                        <gloss xml:id="UT22084-091-073-251" type="term" mode="match">
                             <term>gandharva</term>
-                            <term xml:lang="Bo-Ltn">dri za </term>
-                            <term xml:lang="bo">དྲི་ཟ།</term>
-                            <term xml:lang="Sa-Ltn">gandharva</term>
-                            <term type="definition">A race of deities who are renowned to be great musicians and gain
-                                their nutrition through smells.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
+                            <term type="definition">A race of deities who are renowned to be great musicians and gain their nutrition through smells.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2576,14 +2571,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-091-073-298">
+                        <gloss xml:id="UT22084-091-073-298" type="place" mode="match">
                             <term>Sumeru</term>
-                            <term xml:lang="Bo-Ltn">ri rab </term>
-                            <term xml:lang="bo">རི་རབ།</term>
-                            <term xml:lang="Sa-Ltn">Sumeru </term>
-                            <term type="definition">The mountain in the center of the disc of the world with the four
-                                continents around it.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ri rab</term>
+                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sumeru</term>
                             <term type="alternative">Mount Sumeru</term>
+                            <term type="definition">The mountain in the center of the disc of the world with the four continents around it.</term>
                         </gloss>
                     </item>
                     <item>
