--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.9 <date>2022</date>
+                <edition>v 1.1.10 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-27T00:52:42.867Z" user="admin">27/07/2023 00:52:42</note>
+                <note type="lastUpdated" date-time="2023-07-27T14:41:11.277Z" user="admin">27/07/2023 14:41:11</note>
                 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:25:23.489Z" user="mike">2.d</note>
@@ -89,6 +89,7 @@
     <note type="updated" update="text-version" value="1.1.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.1.8" date-time="2023-03-21T14:27:22.541Z" user="celso">Update to glossary entry "ten royal sūtras"</note>
     <note type="updated" update="text-version" value="1.1.9" date-time="2023-07-27T00:52:40.009Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.1.10" date-time="2023-07-27T14:41:08.409Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2136,7 +2137,7 @@
                                 674</ref>); for extending longevity (<foreign xml:lang="Bo-Ltn">tshe bsring</foreign>).
                                 (7) <title xml:lang="Bo-Ltn">gos sngon can gyi gzungs</title>, perhaps <title xml:lang="Sa-Ltn">Bhagavān­nīlāmbara­dhara­vajrapāṇi­tantra</title> (<ref target="https://read.84000.co/translation/toh498.html">Toh 498</ref>) but possibly
                                 another of the several texts on this form of Vajrapāṇi; for protection (<foreign xml:lang="Bo-Ltn">srung ba</foreign>). (8) <title xml:lang="Sa-Ltn">Uṣṇīṣa­sitāta­patrā</title> (<title xml:lang="Bo-Ltn">gtsug tor gdugs dkar</title>,
-                                    <ref rend="pending" target="https://read.84000.co/translation/toh590.html">Toh
+                                    <ref target="https://read.84000.co/translation/toh590.html">Toh
                                     590</ref>, <ref rend="pending" target="https://read.84000.co/translation/toh591.html">591</ref>, and <ref rend="pending" target="https://read.84000.co/translation/toh592.html">592</ref>);
                                 for averting (<foreign xml:lang="Bo-Ltn">zlog pa</foreign>). (9) <title xml:lang="Sa-Ltn">Vasu­dhāra</title> (<title xml:lang="Bo-Ltn">nor rgyun ma</title>,
                                     <ref rend="pending" target="https://read.84000.co/translation/toh663.html">Toh
