--- a/translations/kangyur/translations/054-003_toh122_wisdom_at_hour_of_death.xml
+++ b/translations/kangyur/translations/054-003_toh122_wisdom_at_hour_of_death.xml
@@ -22,7 +22,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-253">Michael Engle</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.24.16 <date>2022</date>
+                <edition>v 1.24.17 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -54,7 +54,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-27T14:38:16.243Z" user="admin">27/07/2023 14:38:16</note>
+                <note type="lastUpdated" date-time="2023-07-27T14:49:32.244Z" user="admin">27/07/2023 14:49:32</note>
                 <note type="updated" update="translation-status" value="1" date-time="2016-12-01T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2016-12-01T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="text-version" value="v 1.24" date-time="2019-06-18T16:07:37.289Z" user="celso">v 1.24 2019</note>
@@ -83,6 +83,7 @@
     <note type="updated" update="text-version" value="1.24.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.24.15" date-time="2023-03-21T14:14:28.045Z" user="celso">Update to glossary entry</note>
     <note type="updated" update="text-version" value="1.24.16" date-time="2023-07-27T14:38:13.391Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.24.17" date-time="2023-07-27T14:49:29.391Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -430,7 +431,7 @@
                             <term type="definition">In addition to the Five Royal Sūtras: (6) <title xml:lang="Sa-Ltn">Aparimitāyur­jñāna</title>
                                     (<title xml:lang="Bo-Ltn">tshe dang ye shes dpag tu med pa’i mdo</title>, <tei:ref target="https://read.84000.co/translation/toh674.html">Toh 674</tei:ref>); for extending longevity (<foreign xml:lang="Bo-Ltn">tshe bsring</foreign>). (7) <title xml:lang="Bo-Ltn">gos sngon can gyi gzungs</title>, perhaps
                                     <title xml:lang="Sa-Ltn">Bhagavān­nīlāmbara­dhara­vajrapāṇi­tantra</title> (<tei:ref target="https://read.84000.co/translation/toh498.html">Toh 498</tei:ref>) but possibly another of the several texts on
-                                this form of Vajrapāṇi; for protection (<foreign xml:lang="Bo-Ltn">srung ba</foreign>). (8) <title xml:lang="Sa-Ltn">Uṣṇīṣa­sitāta­patrā</title> (<title xml:lang="Bo-Ltn">gtsug tor gdugs dkar</title>, <tei:ref target="https://read.84000.co/translation/toh590.html">Toh 590</tei:ref>, <tei:ref rend="pending" target="https://read.84000.co/translation/toh591.html">591</tei:ref>, and <tei:ref rend="pending" target="https://read.84000.co/translation/toh592.html">592</tei:ref>); for averting (<foreign xml:lang="Bo-Ltn">zlog
+                                this form of Vajrapāṇi; for protection (<foreign xml:lang="Bo-Ltn">srung ba</foreign>). (8) <title xml:lang="Sa-Ltn">Uṣṇīṣa­sitāta­patrā</title> (<title xml:lang="Bo-Ltn">gtsug tor gdugs dkar</title>, <tei:ref target="https://read.84000.co/translation/toh590.html">Toh 590</tei:ref>, <tei:ref target="https://read.84000.co/translation/toh591.html">591</tei:ref>, and <tei:ref target="https://read.84000.co/translation/toh592.html">592</tei:ref>); for averting (<foreign xml:lang="Bo-Ltn">zlog
                                     pa</foreign>). (9) <title xml:lang="Sa-Ltn">Vasu­dhāra</title> (<title xml:lang="Bo-Ltn">nor rgyun ma</title>,
                                     <tei:ref rend="pending" target="https://read.84000.co/translation/toh663.html">Toh 663</tei:ref> and <tei:ref rend="pending" target="https://read.84000.co/translation/toh664.html">664</tei:ref>); for increasing resources (<foreign xml:lang="Bo-Ltn">longs spyod spel ba</foreign>). (10) <title xml:lang="Sa-Ltn">Ekākṣarīmātā­prajñā­pāramitā</title> (<title xml:lang="Bo-Ltn">sher phyin yi ge gcig ma</title>, <tei:ref rend="pending" target="https://read.84000.co/translation/toh23.html">Toh 23</tei:ref>); for the essence (<foreign xml:lang="Bo-Ltn">snying po</foreign>).</term>
                         </gloss>
